Replaced cartoon images, fixed spellings, added custom puppy jumping animation

--- a/style.css
+++ b/style.css
@@ -1,46 +1,35 @@
 #banner {
     background-image: url(assets/cat-big.png);
-    background-position: center;
-    background-size: cover;
+    background-position: bottom;
+    background-size: contain;
     background-repeat: no-repeat;
-    position: relative;
 }
-/*
-#ani {
+
+#custom_animation {
     position: absolute;
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    animation-name: anima;
+    animation-name: jumper;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-duration: 5s;
 }
-@keyframes anima {
+
+@keyframes jumper {
     0% {
-        background-color:rgba(255, 0, 0, 0.329);
-        left:0px;
-        top:0px;
+        transform: translateY(0);
     }
     25% {
-        background-color:rgba(255, 255, 0, 0.329); 
-        left:200px; 
-        top:0px;
+        transform: translateY(-50px);
     }
     50% {
-        background-color:rgba(0, 0, 255, 0.329); 
-        left:200px; 
-        top:240px;
+        transform: translateY(0);
     }
     75% {
-        background-color:rgba(0, 128, 0, 0.329);
-        left:0px;
-        top:240px;
+        transform: translateY(-50px);
     }
     100% {
-        background-color:rgba(255, 0, 0, 0.329);
-        left:0px;
-        top:0px;
+        transform: translateY(0);
     }
 }
-*/
